# mermaid-builder

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  shared.rs  traits.rs
src/diagrams/: class_diagram.rs  entity_relationship.rs  flowchart.rs
src/diagrams/class_diagram/: class_edge.rs  class_node.rs  configuration.rs  visibility.rs
src/diagrams/class_diagram/class_edge/: builder.rs  multiplicity.rs
src/diagrams/class_diagram/class_node/: builder.rs  class_attribute.rs  class_method.rs
src/diagrams/class_diagram/configuration/: builder.rs
src/diagrams/entity_relationship/: entity_relationship_edge.rs  entity_relationship_node.rs
src/diagrams/entity_relationship/entity_relationship_node/: attribute.rs  builder.rs
src/diagrams/flowchart/: builder.rs  configuration.rs  curve_styles.rs  flowchart_edge.rs  flowchart_node.rs
src/diagrams/flowchart/configuration/: builder.rs
src/diagrams/flowchart/flowchart_edge/: builder.rs
src/diagrams/flowchart/flowchart_node/: builder.rs  shape.rs
src/errors/: config_error.rs  edge_error.rs  node_error.rs
src/shared/: arrow_shape.rs  click_event.rs  generic_configuration.rs  generic_diagram.rs  generic_edge.rs  generic_node.rs  style_class.rs
src/shared/click_event/: js_function_call.rs  navigation.rs
src/shared/generic_configuration/: direction.rs  look.rs  renderers.rs  theme.rs
src/shared/style_class/: builder.rs  color.rs  error.rs  font_style.rs  font_weight.rs  style_properties.rs  units.rs
src/traits/: configuration.rs  configuration_builder.rs  diagram.rs  diagram_builder.rs  edge.rs  edge_builder.rs  node_builder.rs  tabbed_display.rs
