[package]
name = "mermaid-builder"
version = "0.1.2"
edition = "2024"
description = "A Rust library for generating Mermaid diagrams using the builder pattern."
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/mermaid-builder"
readme = "README.md"
keywords = ["mermaid", "diagram", "builder", "visualization"]
categories = ["visualization", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
colorsys = "0.7.0"
thiserror = "2.0"

[features]
default = ["serde"]
serde = ["dep:serde"]
[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
